--- a/index.html
+++ b/index.html
@@ -56,19 +56,41 @@
             </div>
             <div class="or-register">or use your email for registration:</div>
             <form>
+
+                <input type="text" name="name" id="name" placeholder="Name">
+                <br>
+                <span id="nameError"></span>
+                <br>
+                <input type="email" name="email" id="email" placeholder="Email">
+                <br>
+                <span id="emailError"></span>
+                <br>
+                <input type="password" name="password" id="password" placeholder="Password">
+                <br>
+                <span id="passwordError"></span>
+
                 <input type="text" name="name" id="name" placeholder="Name"><br><br>
                 <input type="email" name="email" id="email" placeholder="Email"><br><br>
                 <input type="password" name="password" id="password" placeholder="Password"><br><br>
+
                 <div class="terms-container">
                     <input type="checkbox" id="checkBox">
                     <div class="terms">I agree to the <span>Terms</span> and <span>Privacy Policy</span>.</div>
                 </div>
                 <div class="buttons">
-                    <button class="sign-up" type="submit">Sign Up</button>
+                    <button class="sign-up" id="signUp" type="submit">Sign Up</button>
                     <button class="sign-in" type="submit">Sign In</button>
                 </div>
             </form>
         </div>
+
+    </header>
+
+
+
+
+
+
 
         
         <div class="sign-up-container" id="sign-up-container">
@@ -81,7 +103,7 @@
 
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"
         integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ=="
         crossorigin="anonymous"></script>
     <script src="./script/index.js"></script>
