issue #35 - added cauliflower.html page

--- a/home.html
+++ b/home.html
@@ -436,7 +436,7 @@
                                                     <a href="spinach.html">Spinach</a>
                                                 </li>
                                                 <li>
-                                                    <a href="#">Cauliflower</a>
+                                                    <a href="cauliflower.html">Cauliflower</a>
                                                 </li>
                                                 <li>
                                                     <a href="#">Garlic</a>
