issue #56 added beetroot.html page

--- a/home.html
+++ b/home.html
@@ -463,7 +463,7 @@
                                                     <a href="#">Asparagus</a>
                                                 </li>
                                                 <li>
-                                                    <a href="#">Beetroot</a>
+                                                    <a href="beetroot.html">Beetroot</a>
                                                 </li>
                                                 <li>
                                                     <a href="#">Capcicum</a>
