Capsicum Details Added
Added Capsicum Details

--- a/home.html
+++ b/home.html
@@ -132,7 +132,7 @@
                                             <a href="#">Beetroot</a>
                                         </li>
                                         <li>
-                                            <a href="#">Capcicum</a>
+                                            <a href="capsicum.html">Capsicum</a>
                                         </li>
                                         <li>
                                             <a href="#">Carrot</a>
