create a sign in page for desktop view

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
             <button class="sign_up">Sign Up</button>
 
-            <p class="sign_in">Already have an account ? <a href="#">Sign In</a></p>
+            <p class="sign_in">Already have an account ? <a href="./sign-in.html">Sign In</a></p>
         </div>
     
     </header>
