--- a/lemon.html
+++ b/lemon.html
@@ -9,10 +9,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./css/lemon.css" />
     <title>Complete Guide On How To Grow Lemon</title>
+    <script src="https://unpkg.com/scrollreveal"></script>
   </head>
 
   <body>
-    <header>
+
       <div class="container">
         <nav>
           <div class="menu-icons">
