issue #58 - added carrot.html page

--- a/home.html
+++ b/home.html
@@ -469,7 +469,7 @@
                                                     <a href="#">Capcicum</a>
                                                 </li>
                                                 <li>
-                                                    <a href="#">Carrot</a>
+                                                    <a href="carrot.html">Carrot</a>
                                                 </li>
                                                 <li>
                                                     <a href="#">Celeriac</a>
