--- a/carrot.html
+++ b/carrot.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="./css/carrot.css">
     <title>Complete Guide On How To Grow Carrot</title>
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -18,7 +20,7 @@
                     <i class="icon ion-md-close"></i>
                 </div>
                 <a href="#" class="logo">
-                   <span class="agricul">Agric</span><span class="hub">Hub</span>
+                    <span class="agricul">Agric</span><span class="hub">Hub</span>
                 </a>
                 <ul class="nav-list">
                     <li>
@@ -48,7 +50,7 @@
                                                 <a href="#">Food Crops</a>
                                             </li>
                                         </ul>
-                                        
+
                                     </li>
                                     <li>
                                         <a href="#">Grow Live-stock</a>
@@ -77,23 +79,28 @@
         </div>
         <div class="carrot-intro">
             <div class="overlay">
-            <h1 class="carrot-header">Carrot</h1>
-            <p class="carrot-text">Complete Guide On How To Grow Carrot</p>
+                <h1 class="carrot-header">Carrot</h1>
+                <p class="carrot-text">Complete Guide On How To Grow Carrot</p>
             </div>
         </div>
     </header>
     <main>
         <div class="carrot-container">
             <p>
-                Garden-grown carrots are full of flavor and texture! They are a popular, long-lasting root vegetable that can be grown in many climates. Learn all about planting, growing, and harvesting carrots.
+                Garden-grown carrots are full of flavor and texture! They are a popular, long-lasting root vegetable
+                that can be grown in many climates. Learn all about planting, growing, and harvesting carrots.
             </p>
             <div class="carrot-img"></div>
             <p>
-                Carrots are easy to grow as long as they are planted in loose, sandy soil during the cooler periods of the growing season—spring and fall (carrots can tolerate frost). Depending on the variety and local growing conditions, carrots may take anywhere from 2 to 4 months to mature. Plant them in the spring and summer for a continuous harvest through fall!
+                Carrots are easy to grow as long as they are planted in loose, sandy soil during the cooler periods of
+                the growing season—spring and fall (carrots can tolerate frost). Depending on the variety and local
+                growing conditions, carrots may take anywhere from 2 to 4 months to mature. Plant them in the spring and
+                summer for a continuous harvest through fall!
             </p>
             <h1>THE IMPORTANCE OF GOOD SOIL</h1>
             <p>
-                Proper soil preparation is extremely important for carrot growing! If the carrot roots can’t easily grow unobstructed, it can lead to stunted and misshapen crops.
+                Proper soil preparation is extremely important for carrot growing! If the carrot roots can’t easily grow
+                unobstructed, it can lead to stunted and misshapen crops.
             </p>
             <br><br>
             <p>
@@ -101,12 +108,16 @@
             </p>
             <br><br>
             <ol>
-                <li>Till down 12 inches and make sure there are no rocks, stones, or even soil clumps that could impede your carrots’ growth.</li>
-                <li>Avoid amending the soil with nitrogen-rich material such as manure and fertilizer, which can cause carrots to fork and grow little side roots. Instead, work in old coffee grounds. </li>
-                <li>If your ground soil is heavy clay or too rocky, you should consider planting carrots in a raised bed at least 12 inches deep and filled with airy, loamy soil (not clay nor silt).</li>
+                <li>Till down 12 inches and make sure there are no rocks, stones, or even soil clumps that could impede
+                    your carrots’ growth.</li>
+                <li>Avoid amending the soil with nitrogen-rich material such as manure and fertilizer, which can cause
+                    carrots to fork and grow little side roots. Instead, work in old coffee grounds. </li>
+                <li>If your ground soil is heavy clay or too rocky, you should consider planting carrots in a raised bed
+                    at least 12 inches deep and filled with airy, loamy soil (not clay nor silt).</li>
             </ol>
             <p>
-                Finally: Don’t expect to get perfectly straight “grocery store” carrots. Your carrots will still taste better, whatever their shape!
+                Finally: Don’t expect to get perfectly straight “grocery store” carrots. Your carrots will still taste
+                better, whatever their shape!
             </p>
             <div class="misshapen-img"></div>
             <h3>PLANTING</h3>
@@ -114,40 +125,61 @@
             <p><strong>WHEN TO PLANT CARROTS</strong></p>
             <br><br>
             <ol>
-                <li>For a summer harvest, sow seeds outdoors 3 to 5 weeks before the last spring frost date. Find your local frost dates here. 
+                <li>For a summer harvest, sow seeds outdoors 3 to 5 weeks before the last spring frost date. Find your
+                    local frost dates here.
                 </li>
                 <br><br>
-                <p><strong>To ensure a continuous harvest, plant a new round of seeds every 3 weeks through late spring.</strong></p>
+                <p><strong>To ensure a continuous harvest, plant a new round of seeds every 3 weeks through late
+                        spring.</strong></p>
                 <br><br>
-                <li>For a fall harvest, sow seeds in mid- to late summer—starting about 10 weeks before your first fall frost.</li>
+                <li>For a fall harvest, sow seeds in mid- to late summer—starting about 10 weeks before your first fall
+                    frost.</li>
             </ol>
             <h3>HOOSING AND PREPARING A PLANTING SITE</h3>
             <div class="site-img"></div>
             <ol>
-                <li>Carrots need a location that receives full sunlight, though they can tolerate partial shade, too.</li>
-                <li>As discussed above, soil must be loose, sandy or loamy, and airy so that carrot roots can easily push down through the soil.</li>
+                <li>Carrots need a location that receives full sunlight, though they can tolerate partial shade, too.
+                </li>
+                <li>As discussed above, soil must be loose, sandy or loamy, and airy so that carrot roots can easily
+                    push down through the soil.</li>
             </ol>
             <h1>HOW TO PLANT CARROTS</h1>
             <ol>
-                <li>We recommend sowing seeds directly in the garden (or wherever you plan to grow them) rather than transplanting. Carrots do not like to have their roots disturbed. </li>
+                <li>We recommend sowing seeds directly in the garden (or wherever you plan to grow them) rather than
+                    transplanting. Carrots do not like to have their roots disturbed. </li>
                 <li>Sow ¼ inch deep, 2 to 3 inches apart in rows 1 foot apart</li>
-                <p><strong>Tip: Try to distribute seed in an even fashion so that seeds don’t grow together. Use a seed-sower or thin vigorously to the right spacing.</strong></p>
+                <p><strong>Tip: Try to distribute seed in an even fashion so that seeds don’t grow together. Use a
+                        seed-sower or thin vigorously to the right spacing.</strong></p>
                 <br><br>
-                <li>Keep the soil moist with frequent shallow waterings. For small carrot seeds to germinate, the soil mustn’t form a hard crust on top; cover with a layer of vermiculite or fine compost to prevent a crust from forming. (If you put your finger in the ground, it should be moist, but not wet, to the middle knuckle.)</li>
-                <li>Carrots are sometimes slow to germinate. They may take 2 to 3 weeks to show any sign of life, so don’t panic if your carrots don’t appear right away!</li>
-                <p><strong>Tip: To help keep track of where they were planted, mix carrot seeds with quick-germinating radish seeds or sow radish seeds in rows between carrot rows. The radishes will grow quickly and by the time the carrots really start to grow, the radishes can be harvested.</strong></p>
+                <li>Keep the soil moist with frequent shallow waterings. For small carrot seeds to germinate, the soil
+                    mustn’t form a hard crust on top; cover with a layer of vermiculite or fine compost to prevent a
+                    crust from forming. (If you put your finger in the ground, it should be moist, but not wet, to the
+                    middle knuckle.)</li>
+                <li>Carrots are sometimes slow to germinate. They may take 2 to 3 weeks to show any sign of life, so
+                    don’t panic if your carrots don’t appear right away!</li>
+                <p><strong>Tip: To help keep track of where they were planted, mix carrot seeds with quick-germinating
+                        radish seeds or sow radish seeds in rows between carrot rows. The radishes will grow quickly and
+                        by the time the carrots really start to grow, the radishes can be harvested.</strong></p>
                 <br><br>
                 <p>Check out this video to learn how to plant carrots. </p>
-                <iframe width="738" height="405" src="https://www.youtube.com/embed/ttKbPzeadNw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="738" height="405" src="https://www.youtube.com/embed/ttKbPzeadNw"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
             </ol>
             <h3>CARE</h3>
             <div class="caring-img"></div>
             <ol>
-                <li>Gently mulch carrots to retain moisture, speed germination, and block the sun from hitting the roots directly.</li>
-                <li>When seedlings are an inch tall, thin so that they stand 3 to 4 inches apart. Snip tops with scissors instead of pulling them out to prevent damage to the fragile roots of the remaining plants.</li>
-                <li>Water at least one inch (about ½ gallon per square foot) per week to start, then two inches as roots mature.</li>
+                <li>Gently mulch carrots to retain moisture, speed germination, and block the sun from hitting the roots
+                    directly.</li>
+                <li>When seedlings are an inch tall, thin so that they stand 3 to 4 inches apart. Snip tops with
+                    scissors instead of pulling them out to prevent damage to the fragile roots of the remaining plants.
+                </li>
+                <li>Water at least one inch (about ½ gallon per square foot) per week to start, then two inches as roots
+                    mature.</li>
                 <li>Weed diligently, but be careful not to disturb the young carrots’ roots while doing so.</li>
-                <li>Fertilize with a low-nitogen but high-potassium and -phosphate fertilizer 5 to 6 weeks after sowing. (Note that excess nitrogen in the soil promotes top, or foliage, growth—not roots.)</li>
+                <li>Fertilize with a low-nitogen but high-potassium and -phosphate fertilizer 5 to 6 weeks after sowing.
+                    (Note that excess nitrogen in the soil promotes top, or foliage, growth—not roots.)</li>
                 <li>See more tips for growing carrots.</li>
             </ol>
             <h3>PESTS/DISEASES</h3>
@@ -158,22 +190,32 @@
                 <li>Black (Itersonilia) canker</li>
                 <li>Flea Beetles</li>
                 <li>Wireworms</li>
-                <li><strong>Aster Yellow Disease</strong>will cause shortened and discolored carrot tops and hairy roots. This disease is spread by pests as they feed from plant to plant. Keep weeds down and invest in a control plan for pests such as leafhoppers. This disease has the ability to overwinter.</li>
+                <li><strong>Aster Yellow Disease</strong>will cause shortened and discolored carrot tops and hairy
+                    roots. This disease is spread by pests as they feed from plant to plant. Keep weeds down and invest
+                    in a control plan for pests such as leafhoppers. This disease has the ability to overwinter.</li>
             </ol>
             <h1>HARVEST/STORAGE</h1>
             <h3>HOW AND WHEN TO HARVEST CARROTS</h3>
             <ol>
                 <li>Generally, the smaller the carrot, the better the taste.</li>
-                <li>Harvest whenever desired maturity or size is reached. Carrots should be about as wide as your thumb or at least ½ of an inch in diameter.</li>
-                <li>If you’re growing carrots in the spring and early summer, harvest before daily temperatures get too hot, as the heat can cause carrot roots to grow fibrous.</li>
-                <li>Carrots taste much better after one or more frosts. (A frost encourages the plant to start storing energy—sugars—in its root for later use.) Following the first hard frost in the fall, cover carrot tops with an 18-inch layer of shredded leaves to preserve them for harvesting later.</li>
-                <li><strong>Note:</strong>Carrots are biennial. If you fail to harvest and leave the carrots in the ground, the tops will flower and proeduce seeds in the next year.</li>
+                <li>Harvest whenever desired maturity or size is reached. Carrots should be about as wide as your thumb
+                    or at least ½ of an inch in diameter.</li>
+                <li>If you’re growing carrots in the spring and early summer, harvest before daily temperatures get too
+                    hot, as the heat can cause carrot roots to grow fibrous.</li>
+                <li>Carrots taste much better after one or more frosts. (A frost encourages the plant to start storing
+                    energy—sugars—in its root for later use.) Following the first hard frost in the fall, cover carrot
+                    tops with an 18-inch layer of shredded leaves to preserve them for harvesting later.</li>
+                <li><strong>Note:</strong>Carrots are biennial. If you fail to harvest and leave the carrots in the
+                    ground, the tops will flower and proeduce seeds in the next year.</li>
             </ol>
             <h1>HOW DO YOU STORE FRESH CARROTS?</h1>
             <div class="fresh-carrot-img"></div>
             <ol>
-                <li>To store freshly-harvested carrots, twist or cut off all but ½ inch of the tops, scrub off any dirt under cold running water, and air-dry. Seal in airtight plastic bags, and refrigerate. If you simply put fresh carrots in the refrigerator, they’ll go limp in a few hours.</li>
-                <li>You may leave mature carrots in the soil for temporary storage if the ground will not freeze and pests aren’t a problem.</li>
+                <li>To store freshly-harvested carrots, twist or cut off all but ½ inch of the tops, scrub off any dirt
+                    under cold running water, and air-dry. Seal in airtight plastic bags, and refrigerate. If you simply
+                    put fresh carrots in the refrigerator, they’ll go limp in a few hours.</li>
+                <li>You may leave mature carrots in the soil for temporary storage if the ground will not freeze and
+                    pests aren’t a problem.</li>
                 <li>Carrots can also be stored in tubs of moist sand or dry sawdust in a cool, dry area.</li>
             </ol>
             <h3>VARIETIES</h3>
@@ -181,16 +223,22 @@
             <div class="carrot-colors-img"></div>
             <br><br>
             <ol>
-                <li><strong>Little Finger:</strong>heirloom; a small Nantes type of carrot only 4 inches long and one inch thick; good for containers. </li>
-                <li><strong>Nantes:</strong>cylindrical (not tapered); 6 to 7 inches; exceptionally sweet; crisp texture.</li>
+                <li><strong>Little Finger:</strong>heirloom; a small Nantes type of carrot only 4 inches long and one
+                    inch thick; good for containers. </li>
+                <li><strong>Nantes:</strong>cylindrical (not tapered); 6 to 7 inches; exceptionally sweet; crisp
+                    texture.</li>
                 <li><strong>Bolero:</strong>slightly tapered; 7 to 8 inches; resists most leaf pests and blights.</li>
-                <li><strong>Thumberline:</strong>heirloom; round carrot, good for clumpy or clay soil and containers.</li>
-                <li><strong>Danvers:</strong>classic heirloom; 6 to 8 inches long, that tapers at the end and has a rich, dark orange color; suited to heavy soil.</li>
-                <li>For unusual color, try heirloom <strong>Red Cored Chantenay</strong> and bright <strong>Solar Yellow</strong>.</li>
+                <li><strong>Thumberline:</strong>heirloom; round carrot, good for clumpy or clay soil and containers.
+                </li>
+                <li><strong>Danvers:</strong>classic heirloom; 6 to 8 inches long, that tapers at the end and has a
+                    rich, dark orange color; suited to heavy soil.</li>
+                <li>For unusual color, try heirloom <strong>Red Cored Chantenay</strong> and bright <strong>Solar
+                        Yellow</strong>.</li>
             </ol>
         </div>
     </main>
 </body>
 <div class="footer">
 </div>
+
 </html>
