--- a/home.html
+++ b/home.html
@@ -475,7 +475,7 @@
                                                     <a href="#">Celeriac</a>
                                                 </li>
                                                 <li>
-                                                    <a href="#">Celery</a>
+                                                    <a href="celery.html">Celery</a>
                                                 </li>
                                                 <li>
                                                     <a href="#">Fennel</a>
