#62 added chokos.html page

--- a/home.html
+++ b/home.html
@@ -484,7 +484,7 @@
                                                     <a href="#">Chilli pepper</a>
                                                 </li>
                                                 <li>
-                                                    <a href="#">Chokos</a>
+                                                    <a href="chokos.html">Chokos</a>
                                                 </li>
                                                 <li>
                                                     <a href="#">Courgettes and Scallopini</a>
