#61 added fennel.html page

--- a/home.html
+++ b/home.html
@@ -478,7 +478,7 @@
                                                     <a href="celery.html">Celery</a>
                                                 </li>
                                                 <li>
-                                                    <a href="#">Fennel</a>
+                                                    <a href="fennel.html">Fennel</a>
                                                 </li>
                                                 <li>
                                                     <a href="#">Chilli pepper</a>
