#59 added celeriac.html page

--- a/home.html
+++ b/home.html
@@ -472,7 +472,7 @@
                                                     <a href="carrot.html">Carrot</a>
                                                 </li>
                                                 <li>
-                                                    <a href="#">Celeriac</a>
+                                                    <a href="celeriac.html">Celeriac</a>
                                                 </li>
                                                 <li>
                                                     <a href="celery.html">Celery</a>
