#52 added swiss-chard.html page

--- a/home.html
+++ b/home.html
@@ -442,7 +442,7 @@
                                                     <a href="#">Garlic</a>
                                                 </li>
                                                 <li>
-                                                    <a href="#">Swiss chard</a>
+                                                    <a href="swiss-chard.html">Swiss chard</a>
                                                 </li>
                                                 <li>
                                                     <a href="#">Kale and Cavolo</a>
