fixed spelling mistake on home page

--- a/home.html
+++ b/home.html
@@ -451,7 +451,7 @@
                                                     <a href="#">Green peas</a>
                                                 </li>
                                                 <li>
-                                                    <a href="artichoke.html">Arthichokes</a>
+                                                    <a href="artichoke.html">Artichoke</a>
                                                 </li>
                                                 <li>
                                                     <a href="#">Asian green</a>
