added a sign in form fiels for mobile view

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     crop and livestock farming.</p>
             </div>
             <div class="buttons-mobile" id="buttons-mobile">
-                <button class="sign-up-mobile" type="submit" id="signup-Btn">Sign Up</button><br><br>
-                <button class="sign-in-mobile" type="submit">I have an account</button>
+                <a href="#" class="sign-up-mobile" type="submit" id="signup-Btn">Sign Up</a><br><br>
+                <a href="./sign-in.html" class="sign-in-mobile" type="submit">I have an account</a>
             </div>
             <div class="illustration">
                 <img src="/images/undraw_two_factor_authentication_namy.svg" alt="svg-illustration">
@@ -75,8 +75,8 @@
                     <div class="terms">I agree to the <span>Terms</span> and <span>Privacy Policy</span>.</div>
                 </div>
                 <div class="buttons">
-                    <button class="sign-up" id="signUp" type="submit">Sign Up</button>
-                    <button class="sign-in" type="submit">Sign In</button>
+                    <a href="#" class="sign-up" id="signUp" type="submit">Sign Up</>
+                    <a href="./sign-in.html" class="sign-in" type="submit">Sign In</a>
                 </div>
             </form>
         </div>
