--- a/sign-in.html
+++ b/sign-in.html
@@ -28,7 +28,7 @@
             </div>
             
             <div class="mobile-sign-in-form">
-                <h1>Sign in your Account</h1>
+                <h1>Welcome back</h1>
             <form>
                 <input type="email" name="email" id="email" placeholder="Email">
                 <br>
@@ -40,7 +40,7 @@
 
 
                 <div class="buttons">
-                    <a href="#" class="sign-in" type="submit">Sign In</a><br><br><br>
+                    <a href="#" class="sign-in" type="submit">Sign In</a><br><br><br><br>
                     <a href="#" class="sign-up" id="signUp" type="submit">Create Account</a>
                 </div>
             </form>
