added div styled bubble and remember me html, added forgot password blank link, left comments to point out areas on forms for both mobile and larger sized screens, added css on sign-in.css to make wrap reponsive (also has comments), css includes two added media queries to allow better design on the wrap, recommendation: take 2em away from buttons class on mobile designs up until about Larger screen size to avoid unnecessary white space - unless you plan on adding further

--- a/sign-in.html
+++ b/sign-in.html
@@ -16,7 +16,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/sign-in.css">
+    <link rel="stylesheet" href="css/sign-in.css">
 </head>
 
 <body>
@@ -37,7 +37,24 @@
                 <input type="password" name="password" id="password" placeholder="Password">
                 <br>
                 <span id="passwordError"></span>
+                
+                <!-- Remember me & Forgot Password link -->
+                <div class='sign-in-wrap'>
 
+                    <div class='remember-me-wrap'>
+
+                     <div class='radio-custom'></div>
+
+                     <p>Remember me</p>
+
+                    </div>
+
+                    <div class='forgot-password-link-wrap'>
+                        <a href='#' alt='Forgot Password Link' title='Forgot Password Link'>Forgot password?</a>
+                    </div>
+
+                </div>
+                <!-- Remember me & Forgot Password link End -->
 
                 <div class="buttons">
                     <a href="#" class="sign-in" type="submit">Sign In</a><br><br><br><br>
@@ -66,6 +83,24 @@
                 <br>
                 <span id="passwordError"></span>
 
+                <!-- Remember me & Forgot Password link -->
+                <div class='sign-in-wrap'>
+
+                    <div class='remember-me-wrap'>
+
+                     <div class='radio-custom'></div>
+
+                     <p>Remember me</p>
+
+                    </div>
+
+                    <div class='forgot-password-link-wrap'>
+                        <a href='#' alt='Forgot Password Link' title='Forgot Password Link'>Forgot password?</a>
+                    </div>
+
+                </div>
+                <!-- Remember me & Forgot Password link End -->
+
 
                 <div class="buttons">
                     <button class="sign-in" type="submit">Sign In</button><br>
@@ -73,7 +108,7 @@
                 </div>
             </form>
 
-            <p class="forgot-password">Forgot Password?</p>
+            
         </div>
 
     </header>
