--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     crop and livestock farming.</p>
             </div>
             <div class="buttons-mobile" id="buttons-mobile">
-                <a href="#" class="sign-up-mobile" type="submit" id="signup-Btn">Sign Up</a><br><br>
+                <a href="#" class="sign-up-mobile" type="submit" id="signup-Btn">Sign Up</a><br><br><br><br>
                 <a href="./sign-in.html" class="sign-in-mobile" type="submit">I have an account</a>
             </div>
             <div class="illustration">
