Fixes #10 Add about-section

--- a/home.html
+++ b/home.html
@@ -289,7 +289,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="#">About</a>
+                            <a href="./about.html">About</a>
                         </li>
                         <li class="move-right btn">
                             <a href="#">Chat Room</a>
@@ -614,7 +614,7 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="#">About</a>
+                                    <a href="./about.html">About</a>
                                 </li>
                                 <li class="move-right btn">
                                     <a href="#">Chat Room</a>
