--- a/lemon.html
+++ b/lemon.html
@@ -69,7 +69,7 @@
               </ul>
             </li>
             <li>
-              <a href="#">About</a>
+              <a href="./about.html">About</a>
             </li>
             <li class="move-right btn">
               <a href="#">Chat Room</a>
