--- a/food-crop.html
+++ b/food-crop.html
@@ -302,7 +302,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="#">About</a>
+                            <a href="./about.html">About</a>
                         </li>
                         
                     </ul>
