--- a/landing-page.html
+++ b/landing-page.html
@@ -293,7 +293,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#">About</a>
+                        <a href="./about.html">About</a>
                     </li>
                     <li class="move-right btn">
                         <a href="#">Chat Room</a>
