added footers (Godwindaniel10#75)

--- a/home.html
+++ b/home.html
@@ -452,12 +452,12 @@
                   </section>
 
 
+                  <footer class="footer"></footer>
             </main>
 
 
 
 
-            <footer></footer>
 
 
 
