--- a/home.html
+++ b/home.html
@@ -17,6 +17,7 @@
 
         <body>
             <header>
+               
                 <div class="overlay">
 
                     <div class="container">
@@ -305,10 +306,9 @@
                     </div>
                     <div class="intro">
                         <p class="header">A place for Agriculturist</p>
-                        <h1 class="header2">BRINGING GROWTH TO
-                            AGRICULTURE</h1>
-                        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum eos sed quod
-                            voluptatibus voluptate debitis!</p>
+                        <h1 class="header2">BRINGING SIMPLICITY FOR
+                            AGRICULTURIST</h1>
+                        <p class="text">Find all articles and books related to agriculture</p>
                     </div>
                 </div>
             </header>
@@ -400,11 +400,11 @@
                     <div data-aos="fade-right">
                       <div class="box2">
                           <h1>Bee<span>keeping</span></h1>
-                          <p>Agriculture is the most comprehensive word used to denote the many ways in which crop plants. and domestic animals sustain the global human population by providing food and other. products.</p>
-                          <br>
-                          <p>The basic principles of farming are: choose the right time, break up the soil, see to its fertility and moisture, hoe early and harvest early.</p>
+                          <p>
+                            Beekeeping (or apiculture) is the maintenance of bee colonies, commonly in man-made hives, by humans. Most such bees are honey bees in the genus Apis, but other honey-producing bees such as Melipona stingless bees are also kept. A beekeeper (or apiarist) keeps bees in order to collect their honey and other products that the hive produce (including beeswax, propolis, flower pollen, bee pollen, and royal jelly), to pollinate crops, or to produce bees for sale to other beekeepers. A location where bees are kept is called an apiary or "bee yard".
+                          </p>
                           <br><br>
-                          <a href="#">Learn more</a>
+                          <a href="./beekeeping.html">Learn more</a>
                       </div>
                     </div>
 
@@ -442,22 +442,21 @@
                     <div data-aos="fade-left">
                       <div class="box2">
                           <h1>Fish <span>Farming</span></h1>
-                          <p>Livestock farming is simply the management and breeding of domestic, livestock or farm animals for the purpose of obtaining their meat and products (milk, eggs, leather, etc.). </p>
-                          <br>
-                          <p>Livestock farming includes the breeding of cattle, sheep, pigs, goats, poultry, rabbits, snails, fishes, and honeybees.</p>
+                          <p>Fish farming or pisciculture involves commercial breeding of fish, usually for food, in fish tanks or artificial enclosures such as fish ponds. It is a particular type of aquaculture, which is the controlled cultivation and harvesting of aquatic animals such as fish, crustaceans, molluscs and so on, in natural or pseudo-natural environment.</p>
                           <br><br>
-                          <a href="#">Learn more</a>
+                          <a href="./fish-farming.html">Learn more</a>
                       </div>
                     </div>
                   </section>
 
 
+                  <footer class="footer"></footer>
             </main>
 
 
 
 
-            <footer></footer>
+          
 
 
 
